--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "x-stream/offert-maker",
+    "name": "oiljin/offert-maker",
     "description": "Maker KP",
     "type": "library",
     "require": {
